Fix background repeating on mobiles

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,9 @@
     -moz-osx-font-smoothing: grayscale;
 
     background-image: linear-gradient(135deg, #fbf0e4 0%, #efece6 100%);
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
 }
 
 body {
